# mkdocs_sample

./: README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: index.md
sample/: mkdocs.yml
